src/test/ui/error-codes/E0075.stderr
error[E0075]: SIMD vector cannot be empty
  --> $DIR/E0075.rs:14:1
   |
14 | struct Bad; //~ ERROR E0075
   | ^^^^^^^^^^^

error: aborting due to previous error

